<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="5dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.henry.aco_eingangerfassung.MainActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_height="match_parent"
            android:text=""
            android:layout_width="100dp" />

        <TextView
            android:layout_height="match_parent"
            android:text="@string/count"
            android:layout_width="60dp" />

        <TextView
            android:layout_height="match_parent"
            android:text="@string/sum"
            android:layout_width="60dp" />

    </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:paddingTop="10dp"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/child"/>

            <TextView
                android:paddingTop="10dp"
                android:id="@+id/countChild"
                android:layout_gravity="center"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:text="0"/>

            <TextView
                android:paddingTop="10dp"
                android:id="@+id/childPrice"
                android:layout_gravity="center"
                android:layout_height="match_parent"
                android:layout_width="60dp"
                android:text="0" />


            <Button
                android:id="@+id/removeChild"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="-"
                android:background="@android:color/holo_red_light" />

            <Button
                android:id="@+id/addChild"
                android:layout_marginLeft="10dp"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:text="+"
                android:background="@android:color/holo_green_light" />

        </TableRow>


        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:paddingTop="10dp"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/adult"/>

            <TextView
                android:paddingTop="10dp"
                android:id="@+id/countAdult"
                android:layout_gravity="center"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:text="0"/>

            <TextView
                android:paddingTop="10dp"
                android:id="@+id/adultPrice"
                android:layout_gravity="center"
                android:layout_height="match_parent"
                android:layout_width="60dp"
                android:text="0" />


            <Button
                android:id="@+id/removeAdult"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="-"
                android:background="@android:color/holo_red_light"/>

            <Button
                android:id="@+id/addAdult"
                android:layout_marginLeft="10dp"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="+"
                android:background="@android:color/holo_green_light"/>

        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:text="@string/total"/>

            <TextView
                android:id="@+id/totalCount"
                android:layout_height="match_parent"
                android:layout_width="60dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="0"/>

            <TextView
                android:id="@+id/totalSum"
                android:layout_height="match_parent"
                android:layout_width="60dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="0"/>

        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:paddingTop="10dp"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="Postleitzahl"/>

            <EditText
                android:id="@+id/postalCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="5"
                android:inputType="number"
                android:ems="2" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <Spinner
                android:id ="@+id/dropdown"
                android:layout_height="wrap_content"
                android:layout_width="100dp"
                android:spinnerMode="dropdown"
                android:entries="@array/dropDownList">

            </Spinner>
        </TableRow>

        <TableRow
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <Button
                android:id="@+id/submitBtn"
                android:layout_height="50dp"
                android:layout_width="100dp"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/submitBtn"/>

        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <Button
                android:id="@+id/resetBtn"
                android:layout_height="50dp"
                android:layout_width="100dp"
                android:text="@string/resetBtn"/>

        </TableRow>

    </TableLayout>


    <TableRow
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/showListBtn"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="Liste Anzeigen"
            />

        <!--<Button
            android:id="@+id/scanBtn"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/scanBtn" />-->
    </TableRow>




</RelativeLayout>
